OpenSLP Change Log
------------------

Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================

12/25/00 rganesan@myrealbox.com
Fully support dist target. You can now run "make dist" to make a release.

*** TAG OpenSLP 0.8.1 ***

12/19/00 mpeterson@caldera.com
Changes as suggested by Olaf Kirch's security audit

12/15/00 mpeterson@caldera.com
modified GetHostName() so that a resolve occurs on return from gethostname()

12/14/00 rganesan@myrealbox.com
slpd.log and slpd.pid file locations now change depending on the prefix. 

12/13/00 rganesan@myrealbox.com
Introduced predicate version field in srvrqst structure. Passed predicate 
version (v1 or v2) all the way down to SLPDPredicateTest(). 
SLPDPredicateTest() does not handle v1 predicates yet, so it still returns
success without looking at the predicate.

12/12/00 mpeterson@caldera.com
Added code to refresh SLP_LIFETIME_MAXIMUM services

12/12/00 mpeterson@caldera.com
Fixed bug where non-responsive DAs were used repeatedly

12/08/00 mpeterson@caldera.com
Fixed DA / SA lookup code in libslp.  Fixes infinite loop under certain
error producing situations 

12/08/00 mpeterson@caldera.com
Fixed errorcode stomping in slpd and libslp.  Now appropriate message should
get passed to the API caller

12/08/00 rganesan@myrealbox.com
Second set of 64-bit cleanups - removed converted all size_t datatypes to
int to be consistent with the rest of the code.

12/07/00 rganesan@myrealbox.com
Changed AC_OPENSLP_* macros to OPENSLP_* macros as per recommentation in
the Goat book (autoconf/automake/libtool book by the authors).

12/06/00 mpeterson@caldera.com
Fixed bug where certain services were being omitted from a SrvTypeRply

12/06/00 rganesan@myrealbox.com